--- a/style-flormar.css
+++ b/style-flormar.css
@@ -1,91 +1,61 @@
 .flormar-container {
-    max-width: 100%;
-    margin: 0 auto;
-    padding: 0 15px;
-	background-color: #FDEDF2;
+  max-width: 100%;
+  margin: 0 auto;
+  padding: 0 15px;
+background-color: #FDEDF2;
 }
 .flormar-slider {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 20px;
-    padding: 20px 0;
-    justify-content: center; 
-    max-width: 1450px;
-    margin: 0 auto;
-}
-.flormar-slide {
-    flex: 1 1 calc(25% - 20px); 
-    box-sizing: border-box;
-    text-align: center;
-}
-
-.flormar-inner {
-    max-width: 1450px;
-    margin: 0 auto;
-}
-.flormar-slider .slick-slide {
-	display: flex !important;
-    flex-direction: column;
-    align-items: center;
-	margin-right: 10px;
+  max-width: 100%;
+  overflow: hidden;
 }
 .flormar-title {
-  text-align: right; 
-  margin-top: 20px;
-  padding-right: 20px;  
-  font-family: Almoni DL AAA;
-  font-weight: 400;
-  font-size: 40px;
-  line-height: 40.47px;
-  letter-spacing: 0%;
-  text-align: right;
+text-align: right; 
+margin: 20px 0; 
+font-weight: 500;
+font-size: 30px;
+line-height: 40.47px;
+letter-spacing: 0%;
+text-align: right;
+}
+.flormar-slide {
+margin: 0 10px;
+display: flex !important;
+  flex-direction: column;
+  align-items: center;
 }
 .flormar-slider .slick-slide img {
-    width: 336px;
-    height: auto;
-	padding: 16px 50px;
-	background-color: #fff;
+  width: 336px;
+  height: auto;
+padding: 20px;
+object-fit: contain;
 }
 .flormar-slider .slick-prev,
 .flormar-slider .slick-next {
-  position: absolute;
-  top: 40%;
-  transform: translateY(-50%);
-  z-index: 10;  
-  width: 38px;
-  height: 38px;  
-  border-radius: 50%;
-  padding: 0; 
-  cursor: pointer;
-  display: flex;
-  align-items: center; 
-  justify-content: center;  
-  background-color: #171B22;    
+position: absolute;
+top: 40%;
+transform: translateY(-50%);
+z-index: 10;  
+width: 38px;
+height: 38px;  
+border-radius: 50%;
+padding: 0; 
+cursor: pointer;
+display: flex;
+align-items: center; 
+justify-content: center;  
+background-color: #171B22;    
 }
 .flormar-slider .slick-prev {
-  left: -40px;
+left: 0px;
 }
-
 .flormar-slider .slick-next {
-  right: -40px;
-}
-@media (max-width: 1024px) {
-    .flormar-slide {
-        flex: 1 1 calc(33.33% - 20px); 
-    }
+right: 0px;
 }
 @media (max-width: 768px) {
-  .flormar-slider .slick-slide img {
-    width: 216px;
-  }
-.flormar-slider .slick-slide {
-	margin-right: 10px;
-}
 .flormar-title {
-        text-align: center;
-    }
-.flormar-slide {
-        flex: 1 1 calc(50% - 20px); 
-    }	
+text-align: center;
+font-size: 22px;
 }
+}
+
 
